--- a/frontend-test/src/CSS/Accueil.css
+++ b/frontend-test/src/CSS/Accueil.css
@@ -80,3 +80,44 @@
   border: none;
   padding: 0.5rem;
 }
+
+.UserManagement{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
+
+.user-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  flex-direction: column;
+  background-color: var(--additional-color1);
+  margin-right: 1rem;
+  margin-bottom: 3rem;
+}
+
+.users-page{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.users-page h2{
+  padding: 2rem;
+}
+
+.users-container{
+  display: flex;
+  margin-top: 2rem;
+  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+footer{
+
+}
