--- a/frontend-test/src/CSS/global.css
+++ b/frontend-test/src/CSS/global.css
@@ -132,3 +132,39 @@
   width: 800px;
   top: 40%;
 }
+
+@media screen and (max-width: 750px) {
+  .App{
+    width: 100%;
+    height: 100vh;
+  }
+  
+  .App-header-footer h1{
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .interface-container{
+    width: 90%;
+  }
+
+  .button-container button{
+    width: 100%;
+  }
+
+  .connexion-component{
+    width: 100%;
+  }
+
+  .connexion-component input{
+    width: 20rem;
+  }
+
+  .user-item{
+    width: 100%;
+  }
+
+  .App-header-footer{
+    width: 100%;
+  }
+}
